# figgydeck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cleanup-preview.yml  deploy-site.yml  publish.yml  tests.yml
docs/: HOW_IT_WORKS.md
examples/: batch_process.py
scripts/: build_combined_slides.py
site/: README.md  index.html  styles.css
src/figgydeck/: __init__.py  anki.py  clean.py  cli.py  extract.py  images.py  layout.py  models.py  pptx.py
tests/: test_apkg_combined.py  test_chapter1.py  test_clean.py  test_cli.py  test_layout.py  test_manifest.py  test_pptx.py
